assignments/hw1/part2/manifest/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cna-web
spec:
  selector: # Define the wrapping strategy
    matchLabels: # Match all pods with the defined labels
      app: cna-web # Labels follow the `name: value` template
  template: # This is the template of the pod inside the deployment
    metadata:
      labels:
        app: cna-web
    spec:
      containers:
        - image: nyucchw1acr.azurecr.io/webimage
          name: webimage
