assignments/hw1/part2/manifest/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cna-web
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: cna-web.47490b167a494d3da202.eastus.aksapp.io
      http:
        paths:
          - path: / # Which path is this rule referring to
            pathType: Prefix
            backend: # How the ingress will handle the requests
              service:
                name: cna-web # Which service the request will be forwarded to 
                port:
                  name: http # Which port in that service
